CREATE DATABASE IF NOT EXISTS prizm CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;
USE prizm;

CREATE TABLE IF NOT EXISTS users (
 id BIGINT AUTO_INCREMENT PRIMARY KEY,
 
 username VARCHAR(50) NOT NULL UNIQUE,
 nickname VARCHAR(50),
 password VARCHAR(255) NOT NULL,
 user_type ENUM('ADMIN_MAIN', 'ADMIN_SUB', 'USER') NOT NULL DEFAULT 'USER',
 email VARCHAR(100) NOT NULL UNIQUE,
 created_at DATETIME DEFAULT NOW(),
 updated_at DATETIME DEFAULT NOW() ON UPDATE NOW()
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

