//// ----------------------------------------------------
//// Prizm LMS - ERD (DBML Diagram)
//// Generated from LMS_ERD.md and SQL schema
//// https://dbdiagram.io/d/68b63d81777b52b76c91b5bf
//// ----------------------------------------------------

Table users {
  id bigint [pk, increment]
  username varchar(50) [not null, unique]
  nickname varchar(50)
  password varchar(255) [not null]
  user_type user_type_enum [not null, default: 'USER']
  email varchar(100) [not null, unique]
  created_at datetime [default: `NOW()`]
  updated_at datetime [default: `NOW()`]
}

Table TN_BUILDINGS {
  id bigint [pk, increment]
  name varchar(100) [not null, unique]
  address varchar(255)
  latitude decimal(10, 8)
  longitude decimal(11, 8)
}

Table TN_FLOORS {
  id bigint [pk, increment]
  building_id bigint [not null]
  name varchar(50) [not null]
}

Table TN_SPACES {
  id bigint [pk, increment]
  floor_id bigint [not null]
  name varchar(100) [not null]
  type varchar(50)
}

Table TN_ENCLOSURES {
  id bigint [pk, increment]
  space_id bigint [note: 'FK to spaces.id']
  name varchar(100) [not null]
  type enclosure_type
  parent_enclosure_id bigint
  location json [not null]
  description json
}

Table TN_LINES {
  id bigint [pk, increment]
  type line_type [not null]
}

Table TN_FIBERS {
  line_id bigint [pk, ref: > TN_LINES.id]
  from_enclosure_id bigint [not null]
  to_enclosure_id bigint [not null]
  fiber_type fiber_connection_type
  core_count int [not null]
  length_m bigint
  description json
  path json
}

Table TN_CORES {
  id bigint [pk, increment]
  fiber_id bigint [not null]
  core_number int [not null]
  from_port_id bigint
  to_port_id bigint
  otdr_loss decimal(10, 5)
  otdr_distance bigint
  state core_state [not null]
  circuit_id bigint
  circuit_sequence int
}

Table TN_RINGS {
  id bigint [pk, increment]
  name varchar(255) [not null, unique]
  description json
}

Table TN_CIRCUITS {
  id bigint [pk, increment]
  ring_id bigint
  name varchar(255) [not null, unique]
  start_port_id bigint [not null]
  end_port_id bigint [not null]
  total_otdr_distance bigint
  description json
}

Table TC_MANUFACTURERS {
  id bigint [pk, increment]
  name varchar(100) [not null, unique]
  description varchar(100)
}

Table TC_SWITCH_MODELS {
  id bigint [pk, increment]
  manufacturer_id bigint [not null]
  model_name varchar(100) [not null, unique]
  port_count int [not null]
  community varchar(255) [not null]
  name_oid varchar(255) [not null]
  lldp_find_id_oid varchar(255)
  description json
}

Table TN_SWITCHES {
  id bigint [pk, increment]
  enclosure_id bigint [not null]
  switch_model_id bigint [not null]
  name varchar(100) [not null, unique]
  serial_number varchar(255) [not null, unique]
  form_factor switch_form_factor
  description json
}

Table TN_DEVICES {
  id bigint [pk, increment]
  device_type varchar(100) [not null]
  name varchar(100) [not null, unique]
  description json
}

Table TN_PORTS {
  id bigint [pk, increment]
  switch_id bigint [not null]
  port_number int [not null]
  port_type port_type_enum [not null]
  is_input boolean
  connected_device_id bigint
  neighbor_chassis_id varchar(255)
  neighbor_port_id varchar(255)
  neighbor_system_name varchar(255)
  last_updated timestamp [not null]
}

Table TN_SWITCH_MODEL_PORTS {
  id bigint [pk, increment]
  switch_model_id bigint [not null]
  port_number int [not null]
  port_type switch_model_port_type [not null]
}

//// ----------------------------------------------------
////     ENUMS
//// ----------------------------------------------------

Enum user_type_enum {
  ADMIN_MAIN
  ADMIN_SUB
  USER
}

Enum enclosure_type {
  MDF
  ODF
  OFD
  FDF
  IDF
}

Enum line_type {
  FIBER
  ELECTRONIC
}

Enum fiber_connection_type {
  SINGLE
  MULTI
  MIXED
}

Enum core_state {
  ACTIVE
  INACTIVE
  BROKEN
}

Enum switch_form_factor {
  INTERNAL
  EXTERNAL
}

Enum port_type_enum {
  OPTICAL
  LAN
}

Enum switch_model_port_type {
  RJ45
  SFP
}

//// ----------------------------------------------------
////     RELATIONSHIPS
//// ----------------------------------------------------

Ref: TN_FLOORS.building_id > TN_BUILDINGS.id
Ref: TN_SPACES.floor_id > TN_FLOORS.id
Ref: TN_ENCLOSURES.space_id > TN_SPACES.id
Ref: TN_ENCLOSURES.parent_enclosure_id > TN_ENCLOSURES.id
Ref: TN_FIBERS.from_enclosure_id > TN_ENCLOSURES.id
Ref: TN_FIBERS.to_enclosure_id > TN_ENCLOSURES.id
Ref: TN_CORES.fiber_id > TN_FIBERS.line_id
Ref: TN_CORES.from_port_id > TN_PORTS.id
Ref: TN_CORES.to_port_id > TN_PORTS.id
Ref: TN_CORES.circuit_id > TN_CIRCUITS.id
Ref: TN_CIRCUITS.ring_id > TN_RINGS.id
Ref: TN_CIRCUITS.start_port_id > TN_PORTS.id
Ref: TN_CIRCUITS.end_port_id > TN_PORTS.id
Ref: TC_SWITCH_MODELS.manufacturer_id > TC_MANUFACTURERS.id
Ref: TN_SWITCHES.enclosure_id > TN_ENCLOSURES.id
Ref: TN_SWITCHES.switch_model_id > TC_SWITCH_MODELS.id
Ref: TN_PORTS.switch_id > TN_SWITCHES.id
Ref: TN_PORTS.connected_device_id > TN_DEVICES.id
Ref: TN_SWITCH_MODEL_PORTS.switch_model_id > TC_SWITCH_MODELS.id